--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
         </div>
       </div>
     </section>
+    <section class="section__head">
+      <div class="Project__container">
+        <div class="Project__image">
+          <img src="frame.png" alt="boy" />
+        </div>
+      </div>
+      <div class="Project__text">
+        <div class="Project__text__container">
+          <h4>Projects</h4>
+          <p>I have completed several projects that demonstrate my skills and expertise. Some of these include:</p>
+          <ul>
+            <li>A web-based chat application using React and Node.js.</li>
+            <li>  A mobile application for tracking fitness goals using React Native and Firebase.</li>
+            <li>An e-commerce website using Ruby on Rails and Stripe.</li>
+          </ul>
+          <p>If you would like to see more examples of my work, please don't hesitate to contact me. I am always looking for new and exciting projects to work on and would love to hear from you.</p>
+            <p>Thank you for visiting my portfolio website.</p>
+        </div>
+      </div>
+    </section>
     <footer>
         <div class="Footer__container">
             <div class="logo">
